src/objects/Approvers__c.object
<CustomObject>
    <description>Related list to attach to any object with an approval workflow.
Created for ME &quot;Form&quot; object and only used there.</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <inlineHelpText>Country Managing Director and ME Business Line Leader are required in accordance with sub-DoA.</inlineHelpText>
        <label>Approver Role</label>
        <picklist>
            <picklistValues>
                <fullName>Client Account Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Business Line Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Managing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME Business Line Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME Region Market Sector Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <inlineHelpText>Click to return to the form</inlineHelpText>
        <label>Form</label>
        <referenceTo>Forms__c</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_to_RAPID_pursuit_decisions_by_role__c</fullName>
        <defaultValue>&apos;http://my.aecomnet.com/deployedfiles/Intranet/Geographies/Middle%20East/Business%20Tools%20Links/ME%20RAPID%20-%20Go%20No%20Go%20decisions%2028Jan2013.pdf&apos;</defaultValue>
        <inlineHelpText>Click to view current document</inlineHelpText>
        <label>Link to RAPID pursuit decisions by role</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name_of_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Salesforce User who is an approver for this form</inlineHelpText>
        <label>Name of Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reviewers</label>
    <nameField>
        <displayFormat>Approver-{000}</displayFormat>
        <label>Approver Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>